<resources>
    <string name="app_name">"GoEvent "</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home_screen_text">From house painting to personal training, we bring you the right pros\n for every project on your list.</string>
    <string name="home_screen_main_text">Consider it done.</string>
    <string name="action_settings">Settings</string>
    <string name="check_connection">Try Again</string>
    <string name="connection_text">Ohh! Something went wrong </string>
    <string name="internet_text2">Please check Your Internet Connection</string>
    <string name="search_hint">Search Services</string>
    <string name="book_button">View profile &amp; Book</string>

    <string name="no_post_found">Not Found</string>
    <string name="no_post">No Post</string>

    <string name="no_internet_text">No Internet Connection</string>
    <string name="retry_txt">RETRY</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_register">Create an Account</string>
    <string name="login_skip">SKIP</string>
    <string name="register_title">New Account</string>
    <string name="register_username">Username</string>
    <string name="register_button">Create</string>
    <string name="login_phone">Phone No.</string>
    <string name="logout_user">Logout</string>

    <array name="user_type">
        <item>Select UserType</item>
        <item>Customer</item>
        <item>Service Provider</item>
    </array>
    <string name="title_activity_profile">Profile</string>
    <string name="title_service">Service</string>
    <string name="title_profile">Profile</string>
    <string name="title_reviews">Reviews</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_contact_vendor">Contact Vendor</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text">Welcome</string>
    <string name="user">User</string>

    <string name="Aboutinfo">\n Wait for info</string>

    <string name="save_preference_name">GoEvent</string>


    <!-- Internet error -->
    <string name="no_internet_error_title">No Internet</string>
    <string name="no_internet_error">No Internet Detected. Please turn on your Wifi</string>

    <!--  error -->
    <string name="error_title">Error</string>


    <!--SHARE-->
    <string name="share_message">Check out this Place:</string>

    <string name="vendor_description">Description</string>
    <string name="vendor_more_des">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>

    <string name="name">Name</string>
    <string name="Phone_Number">Your Phone No</string>
    <string name="Your_Message">Your Message</string>
    <string name="search_services">Search Services</string>


</resources>
