<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_service"
        android:icon="@drawable/ic_menu_manage"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:title="@string/title_service" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/users"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_rating"
        android:icon="@drawable/ic_stat_star"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:title="@string/title_reviews" />


    <item
        android:id="@+id/navigation_gallery"
        android:icon="@drawable/ic_menu_gallery"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:title="@string/title_gallery" />


    <item
        android:id="@+id/navigation_contact_vendor"
        android:icon="@drawable/contect"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:title="@string/title_contact_vendor" />

</menu>
