<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_height="300dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/internet"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connection_text"
        android:textColor="@color/colorBlack"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/internet_text2"
        android:textSize="15sp"
        />



    <Button
        android:id="@+id/check_coonection"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/check_connection"
        android:textAllCaps="false"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="10dp"
        android:ems="8"/>






</LinearLayout>